# aws-rs

./: Cargo.toml
examples/: ec2.rs  glacier.rs  tree_hash.rs
src/: credentials.rs  request.rs
src/signers/: sigv4.rs
