[package]
name = "aws"
version = "0.0.1"
authors = ["Thom May <thom@may.lt>"]

[[bin]]
name = "ec2"
path = "examples/ec2.rs"

# name = "glacier"
# path = "examples/glacier.rs"

[dependencies]
openssl = "*"
time = "*"
url = "*"
log = "*"
rustc-serialize = "*"
hyper = "*"
env_logger = "*"

[dependencies.rust-ini]
git = "https://github.com/zonyitoo/rust-ini.git"

